# infoobot-rs

./: Cargo.toml
migrations/: 20210504031700_init.sql
src/: handler.rs  main.rs  message.rs
