[package]
name = "popple-rs"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }

[profile.release]
opt-level = "s"
lto = "thin"
