[package]
name = "infoobot"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", default-features = false, features = ["net", "rt-multi-thread", "macros"] }
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "sqlite" ] }
regex = "1"

[profile.release]
opt-level = "s"
lto = "thin"
